[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-grid-openenv"
version = "0.1.0"
description = "An OpenEnv-compliant Smart Grid reinforcement learning environment."
authors = [
  { name="Abhinay Sai Krishna" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "openai",
    "transformers",
    "huggingface_hub",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
